--- a/template.html
+++ b/template.html
@@ -5,21 +5,34 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Responsive Email</title><!-- Some clients display this in the title bar -->
 </head>
-<body style="margin: 0; padding: 0; width:100%; height:100%;">
-	<table class="email_body" width="100%" cellspacing="0" cellpadding="10" border="0" bgcolor="#A6A3FC">
+<body style="margin: 0; padding: 0; width:100%; height:100%; background-color: #FFE9AD" bgcolor="#FFE9AD">
+	<style>
+		
+	</style>
+	<table class="email_body" width="100%" cellspacing="0" cellpadding="5" border="0" bgcolor="#A6A3FC">
 		<tr>
 			<td align="center">
-				<table class="wrapper" style="max-width:620px; display:block" cellspacing="0" cellpadding="10" border="0" bgcolor="#C0C0FF">
+				<table class="wrapper" style="max-width:610px; display:block" cellspacing="0" cellpadding="5" border="0" bgcolor="#C0C0FF">
 					<tr>
-						<td align="left">
+						<td>
 							<!-- Outlook and Lotus Notes don't support max-width but are always on desktop, so we can enforce a wide, fixed width view. -->
 							<!--[if (gte mso 9)|(IE)]>
-							<table width="600" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFF3CO">
+							<table width="600" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFF3C0">
 								<tr>
 									<td width="600">
 							<![endif]-->
 
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis fugit possimus sunt reiciendis sequi eligendi pariatur sapiente, expedita amet quaerat et molestiae deserunt? Asperiores assumenda id, voluptatum illo minus rem fuga, delectus cupiditate vitae enim tempore consequuntur ipsam doloremque, recusandae facere ipsum error eum harum minima nisi! Earum modi aspernatur soluta aliquid doloribus minus accusamus animi quis vel. Nihil itaque doloribus ducimus aliquam voluptatibus molestiae adipisci iusto quos quisquam sint quae deserunt quasi ipsum ea praesentium optio tempore eos qui asperiores atque, deleniti nobis laboriosam ut quis? Nihil quas debitis qui dicta illum. Sunt accusantium, repudiandae aperiam culpa praesentium est!
+							<table cellspacing="0" cellpadding="10" border="0">
+								<tr align="center">
+									<td align="left" width="280px" style="background-color: #FFC2C2; display:inline-block">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis soluta ea nobis minima magni accusantium exercitationem cumque nostrum consequuntur sapiente a saepe impedit veniam unde iste odio voluptate, in pariatur architecto quos, dolorum alias. Aspernatur laudantium itaque recusandae assumenda, voluptas eveniet, totam voluptates in dignissimos quibusdam repudiandae similique cumque placeat.
+									</td><!--
+								--><td align="left" width="280px" style="background-color: #FFFFDA; display:inline-block">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero animi rem possimus ipsa distinctio quas, eaque illum culpa, eum placeat aperiam atque enim neque, expedita quos sapiente iure perspiciatis asperiores saepe minima ab dolores? Quibusdam quasi obcaecati, in dolorum doloremque aliquam laboriosam voluptatibus sint, quae maiores delectus fugiat a placeat!
+									</td>
+								</tr>
+							</table>
+
 						
 							<!-- End of Outlook-specific wrapper -->
 							<!--[if (gte mso 9)|(IE)]>
