responsive two column email

--- a/template.html
+++ b/template.html
@@ -14,20 +14,26 @@
 			<td align="center">
 				<table class="wrapper" style="max-width:610px; display:block" cellspacing="0" cellpadding="5" border="0" bgcolor="#C0C0FF">
 					<tr>
-						<td>
+						<td align="center">
 							<!-- Outlook and Lotus Notes don't support max-width but are always on desktop, so we can enforce a wide, fixed width view. -->
 							<!--[if (gte mso 9)|(IE)]>
 							<table width="600" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFF3C0">
 								<tr>
-									<td width="600">
+									<td width="300">
 							<![endif]-->
 
-							<table cellspacing="0" cellpadding="10" border="0">
-								<tr align="center">
-									<td align="left" width="280px" style="background-color: #FFC2C2; display:inline-block">
+							<table width="300px" cellspacing="0" cellpadding="10" border="0" bgcolor="#FFC2C2" style="display:inline-block">
+								<tr>
+									<td align="left">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis soluta ea nobis minima magni accusantium exercitationem cumque nostrum consequuntur sapiente a saepe impedit veniam unde iste odio voluptate, in pariatur architecto quos, dolorum alias. Aspernatur laudantium itaque recusandae assumenda, voluptas eveniet, totam voluptates in dignissimos quibusdam repudiandae similique cumque placeat.
-									</td><!--
-								--><td align="left" width="280px" style="background-color: #FFFFDA; display:inline-block">
+									</td>
+								</tr>
+							</table><!--[if (gte mso 9)|(IE)]>
+									</td>
+									<td width="300">
+				<![endif]--><table width="300px" cellspacing="0" cellpadding="10" border="0" bgcolor="#FFFFDA" style="display:inline-block">
+								<tr>
+									<td align="left">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero animi rem possimus ipsa distinctio quas, eaque illum culpa, eum placeat aperiam atque enim neque, expedita quos sapiente iure perspiciatis asperiores saepe minima ab dolores? Quibusdam quasi obcaecati, in dolorum doloremque aliquam laboriosam voluptatibus sint, quae maiores delectus fugiat a placeat!
 									</td>
 								</tr>
