fix markup, add comments, final images

--- a/template.html
+++ b/template.html
@@ -8,11 +8,15 @@
 </head>
 <body style="margin: 0; padding: 0; width:100%; height:100%; background-color: #FFE9AD" bgcolor="#FFE9AD">
 	<style>
+	/* style in the body because some clients discard the head*/
+	/* NOTE that gmail will ignore everything within a style tag */
+		/* For clients that support media queries
+		   reduce the width of the whole email to one column when the screen is too narrow for two columns*/
 		@media only screen and (max-width: 620px) {
-				.wrapper {
-					width: 310px !important;
-				}
+			.wrapper {
+				width: 310px !important;
 			}
+		}
 	</style>
 	<table class="email_body" width="100%" cellspacing="0" cellpadding="5" border="0" bgcolor="#A6A3FC">
 		<tr>
@@ -23,28 +27,29 @@
 						<td>
 							<!-- Outlook and Lotus Notes don't support max-width but are always on desktop, so we can enforce a wide, fixed width view. -->
 							<!--[if (gte mso 9)|(IE)]>
-							<table width="600" cellpadding="0" cellspacing="0" border="0">
+							<table class="fixed_width_table" width="600" cellpadding="0" cellspacing="0" border="0">
 								<tr>
 									<td width="600">
 							<![endif]-->
 
 							<table cellspacing="0" cellpadding="0" border="0" >
-								<tr>
+								<tr class="header">
 									<td align="center" width="100%" style="font-size:2em; background-color: #C5D3FF">
 										<center>
 											<b>A Responsive Email</b>
 										</center>
 									</td>
 								</tr>
-								<tr align="center">
+								<!-- by aligning the row to center, ensure that the columns are centered when in single column view -->
+								<tr class="content" align="center">
 									<td>
 										<!--[if (gte mso 9)|(IE)]>
-										<table width="600" cellpadding="0" cellspacing="0" border="0">
+										<table class="fixed_columns" width="600" cellpadding="0" cellspacing="0" border="0">
 											<tr>
 												<td width="300" valign="top">
 										<![endif]-->
 										
-										<table valign="top" width="300px" cellspacing="0" cellpadding="10" border="0" bgcolor="#FFC2C2" style="display:inline-block; vertical-align: top">
+										<table class="column1" valign="top" width="300px" cellspacing="0" cellpadding="10" border="0" bgcolor="#FFC2C2" style="display:inline-block; vertical-align: top">
 											<tr>
 												<td align="left">
 													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis soluta ea nobis minima magni accusantium exercitationem cumque nostrum consequuntur sapiente a saepe impedit veniam unde iste odio voluptate, in pariatur architecto quos, dolorum alias. Aspernatur laudantium itaque recusandae assumenda, voluptas eveniet, totam voluptates in dignissimos quibusdam repudiandae similique cumque placeat.
@@ -53,7 +58,7 @@
 										</table><!--[if (gte mso 9)|(IE)]>
 												</td>
 												<td width="300" valign="top">
-							<![endif]--><table valign="top" width="300px" cellspacing="0" cellpadding="10" border="0" bgcolor="#FFFFDA" style="display:inline-block; vertical-align: top">
+							<![endif]--><table class="column2" valign="top" width="300px" cellspacing="0" cellpadding="10" border="0" bgcolor="#FFFFDA" style="display:inline-block; vertical-align: top">
 											<tr>
 												<td align="left">
 													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero animi rem possimus ipsa distinctio quas, eaque illum culpa, eum placeat aperiam atque enim neque, expedita quos sapiente iure perspiciatis asperiores saepe minima ab dolores? Quibusdam quasi obcaecati, in dolorum doloremque aliquam laboriosam voluptatibus sint, quae maiores delectus fugiat a placeat!
@@ -68,16 +73,13 @@
 
 									</td>
 								</tr>
-								<tr>
+								<tr class="footer">
 									<td align="left" width="100%" style="background-color: #C5D3FF">
 										By Jen Berry
 									</td>
 								</tr>
 							</table>
 
-
-
-						
 							<!-- End of Outlook-specific wrapper -->
 							<!--[if (gte mso 9)|(IE)]>
 									</td>
